--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "NeteaseCloudMusicApi",
-  "version": "3.47.5",
+  "version": "4.0.0",
   "description": "网易云音乐 NodeJS 版 API",
   "scripts": {
     "start": "node app.js",
@@ -39,6 +39,8 @@
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.9",
+    "md5": "^2.3.0",
+    "music-metadata": "^7.5.3",
     "pac-proxy-agent": "^4.0.0",
     "qrcode": "^1.4.4",
     "tunnel": "^0.0.6"
