--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "NeteaseCloudMusicApi",
-  "version": "4.3.0",
+  "version": "5.0.0",
   "description": "网易云音乐 NodeJS 版 API",
   "scripts": {
     "start": "node app.js",
@@ -14,7 +14,11 @@
   },
   "bin": "./app.js",
   "pkg": {
-    "scripts": "module/*.js"
+    "scripts": "module/*.js",
+    "assets":[
+      "/node_modules/vm2/lib/contextify.js",
+      "/public"
+    ]
   },
   "keywords": [
     "网易云音乐",
