--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "NeteaseCloudMusicApi",
-  "version": "4.7.0",
+  "version": "4.8.0",
   "description": "网易云音乐 NodeJS 版 API",
   "scripts": {
     "start": "node app.js",
-    "test": "node beforeTest.js && mocha -r intelli-espower-loader -t 30000 server.test.js main.test.js --exit",
+    "test": "mocha -r intelli-espower-loader -t 30000 server.test.js main.test.js --exit",
     "lint": "eslint \"**/*.{js,ts}\"",
     "lint-fix": "eslint --fix \"**/*.{js,ts}\"",
     "prepare": "husky install",
