--- a/.github/workflows/Build_Image.yml
+++ b/.github/workflows/Build_Image.yml
@@ -23,12 +23,11 @@ jobs:
             with:
               swap-size-gb: 10
           - name: Build and publish image
-            uses: ilteoood/docker_buildx@master
+            uses: elgohr/Publish-Docker-Github-Action@v5
             if: startsWith(github.ref, 'refs/tags/') && startsWith(github.repository, 'Binaryify/NeteaseCloudMusicApi')
             with:
-              publish: true
-              imageName: binaryify/netease_cloud_music_api # dockerid/imageName
-              platform: linux/arm64,linux/amd64,linux/arm/v6,linux/arm/v7 # 你准备构建的镜像平台
-              tag: latest,${{ steps.get_version.outputs.VERSION }}
-              dockerUser: ${{ secrets.DOCKER_USERNAME }} # docker hub userid 在setting创建secrets name=DOCKER_USERNAME  value=dockerid
-              dockerPassword: ${{ secrets.DOCKER_PASSWORD }} # docker hub password,在setting创建secrets name=DOCKER_PASSWORD  value=dockerpassword
+              name: binaryify/netease_cloud_music_api # dockerid/imageName
+              platforms: linux/arm64,linux/amd64,linux/arm/v6,linux/arm/v7 # 你准备构建的镜像平台
+              tags: latest,${{ steps.get_version.outputs.VERSION }}
+              username: ${{ secrets.DOCKER_USERNAME }} # docker hub userid 在setting创建secrets name=DOCKER_USERNAME  value=dockerid
+              password: ${{ secrets.DOCKER_PASSWORD }} # docker hub password,在setting创建secrets name=DOCKER_PASSWORD  value=dockerpassword
