--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "NeteaseCloudMusicApi",
-  "version": "4.18.0",
+  "version": "4.18.1",
   "description": "网易云音乐 NodeJS 版 API",
   "scripts": {
     "start": "node app.js",
@@ -29,7 +29,8 @@
       "node_modules/tslib",
       "node_modules/vm2",
       "module",
-      "public"
+      "public",
+      "data"
     ]
   },
   "keywords": [
@@ -60,7 +61,8 @@
     "module_types",
     "server.js",
     "generateConfig.js",
-    "public"
+    "public",
+    "data"
   ],
   "dependencies": {
     "axios": "^1.2.2",
