feat: 支持启用全局解灰

--- a/.env
+++ b/.env
@@ -2,10 +2,14 @@
 CORS_ALLOW_ORIGIN = "*"
 
 ### UnblockNeteaseMusic 设置项
+## 启用全局解灰, 无论是否调用参数都会使用解灰(推荐开启)
+ENABLE_GENERAL_UNBLOCK = true
 ## 歌曲启用无损音质
 ENABLE_FLAC = true
 ## 启用无损音质时，是否选择音质最高的
 SELECT_MAX_BR = true
+## 音源设置
+UNBLOCK_SOURCE = ['pyncmd','kuwo', 'qq', 'migu', 'kugou']
 ## 严格按照配置音源设置顺序进行匹配
 FOLLOW_SOURCE_ORDER = true
 ## Cookie设置项; 推荐在Vercel等平台进行环境变量的设置或者设置github secret
