feat(proxyUrl): 支持代理酷我资源, 需自己部署反向代理

--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
-# CORS资源共享设置
+### CORS资源共享设置
 ## 如果你需要配置, 请取消下面的注释并设置具体的域名
 # CORS_ALLOW_ORIGIN = "*"
+
+### 代理设置
+## 如果你需要配置, 请取消下面的注释并设置具体的代理地址
+PROXY_URL = "https://your-proxy-url.com/?proxy="
+
 
 ### UnblockNeteaseMusic 设置项
 ## 启用全局解灰, 无论是否调用参数都会使用解灰(推荐开启)
