--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -3,17 +3,41 @@ name: Release
 
 on:
   push:
+    tags:
+      - 'v*'
 
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+
+      # 发布到 NPM Registry
+      - name: Setup Node.js for NPM
+        uses: actions/setup-node@v3
         with:
           node-version: 20
           registry-url: 'https://registry.npmjs.org/'
       - run: npm install
-      - run: npm publish --access public
+      - name: Publish to NPM
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      # 发布到 GitHub Packages
+      - name: Setup Node.js for GitHub Packages
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          registry-url: 'https://npm.pkg.github.com'
+      - name: Update package name for GitHub Packages
+        run: |
+          json=`cat package.json`
+          echo "$json" | jq '.name = "@neteasecloudmusicapienhanced/api"' > package.json
+      - name: Publish to GitHub Packages
+        run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ github.token }}
