--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neteaseapireborn/api",
-  "version": "4.28.28",
+  "version": "4.28.28-beta.1",
   "description": "为停更的网易云音乐 NodeJs API 提供持续的维护！",
   "scripts": {
     "start": "node app.js",
