--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ ENABLE_GENERAL_UNBLOCK = true
 ## 歌曲启用无损音质
 ENABLE_FLAC = true
 ## 启用无损音质时，是否选择音质最高的
-SELECT_MAX_BR = true
+SELECT_MAX_BR = false
 ## 音源设置
 UNBLOCK_SOURCE = pyncmd,qq,kuwo,migu,kugou
 ## 严格按照配置音源设置顺序进行匹配
