--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neteaseapireborn/api",
-  "version": "4.29.3",
+  "version": "4.29.4",
   "description": "为停更的网易云音乐 NodeJs API 提供持续的维护！",
   "scripts": {
     "start": "node app.js",
@@ -50,7 +50,7 @@
       "git add"
     ]
   },
-  "author": "binaryify",
+  "author": "MoeFurina",
   "license": "MIT",
   "files": [
     "module",
@@ -65,7 +65,7 @@
     "data"
   ],
   "dependencies": {
-    "@unblockneteasemusic/server": "^0.27.10",
+    "@unblockneteasemusic/server": "^0.28.0",
     "axios": "^1.12.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.6.1",
