ci(workflow): fix the workflow file that package name is illegal

--- a/.github/workflows/Build_Image.yml
+++ b/.github/workflows/Build_Image.yml
@@ -44,6 +44,6 @@ jobs:
           tags: |
             moefurina/ncm-api:latest
             moefurina/ncm-api:${{ env.VERSION }}
-            ghcr.io/moefurina/ncm-api:latest
-            ghcr.io/moefurina/ncm-api:${{ env.VERSION }}
+            ghcr.io/neteasecloudmusicapienhanced/ncm-api:latest
+            ghcr.io/neteasecloudmusicapienhanced/ncm-api:${{ env.VERSION }}
           platforms: linux/amd64
