--- a/.github/workflows/Build_Image.yml
+++ b/.github/workflows/Build_Image.yml
@@ -3,7 +3,7 @@ name: Publish Docker image
 on:
   push:
     branches: [main, master]
-    tags: ["v*"]
+    tags: ['v*']
   workflow_dispatch:
 
 permissions:
@@ -22,6 +22,12 @@ jobs:
       - name: Read package version
         id: pkg
         run: echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -46,4 +52,4 @@ jobs:
             moefurina/ncm-api:${{ env.VERSION }}
             ghcr.io/neteasecloudmusicapienhanced/ncm-api:latest
             ghcr.io/neteasecloudmusicapienhanced/ncm-api:${{ env.VERSION }}
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64/v8
